# setdefaultencoding

./: README.md  pyproject.toml  setdefaultencoding.py  setup.cfg  setup.py
