[metadata]
name = setdefaultencoding
description = Steal a copy of sys.setdefaultencoding during site initialization for later.
long_description = file: README.md
long_description_content_type=text/markdown
author = Thomas Grainger
author_email = setdefaultencoding@graingert.co.uk
version = 0.0.0a0

[options]
py_modules = setdefaultencoding
